# cclaudeAndroid

./: .gitignore  BUILD.md  FDROID.md  GITHUB_PUSH.md  PRIVACY.md  PROJECT_OVERVIEW.md  README.md  __github_workflows_README.md  fdroid-build.sh  generate-icons.py  gradlew  push-to-github.sh  verify-fdroid.sh
.github/workflows/: android-build.yml  build.yml  fdroid.yml  nightly-build.yml  nightly.yml  quick-build.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cclaude_bridge.cpp  cclaude_jni.cpp  cclaude_jni.h
app/src/main/java/com/cclaude/android/: CClaudeApplication.kt  MainActivity.kt
app/src/main/java/com/cclaude/android/data/: ChatMessage.kt  ChatRepository.kt  SettingsRepository.kt
app/src/main/java/com/cclaude/android/native/: CClaudeAgent.kt  CClaudeNative.kt
app/src/main/java/com/cclaude/android/ui/components/: ChatInput.kt  ChatMessageItem.kt  InputField.kt  MessageBubble.kt
app/src/main/java/com/cclaude/android/ui/screens/: ChatScreen.kt  SettingsScreen.kt
app/src/main/java/com/cclaude/android/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/cclaude/android/viewmodel/: ChatViewModel.kt  SettingsViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
ci-workflows/workflows/: build.yml  fdroid.yml  nightly.yml  quick-build.yml  release.yml
docs/: ICONS.md
docs/icons/: README.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/zh-CN/: full_description.txt  short_description.txt  title.txt
metadata/: com.cclaude.android.yml
